bluejay-validator/tests/snapshots/executable_integration_test__error@field_selection_merging.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/field_selection_merging.graphql
---
Error: Fields in selection set do not merge due to incompatible types
   ╭─[<unknown>:2:7]
   │
 2 │ ╭─▶   dog {
 3 │ │       name: nickname
   │ │             ────┬───  
   │ │                 ╰───── First field has type String
 4 │ │       name
   │ │       ──┬─  
   │ │         ╰─── Second field has type String!
 5 │ ├─▶   }
   │ │         
   │ ╰───────── Fields in selection set do not merge
───╯

Error: Fields in selection set do not merge due to unequal field names
   ╭─[<unknown>:2:7]
   │
 2 │ ╭─▶   dog {
 3 │ │       name: nickname
   │ │             ────┬───  
   │ │                 ╰───── First field
 4 │ │       name
   │ │       ──┬─  
   │ │         ╰─── Second field
 5 │ ├─▶   }
   │ │         
   │ ╰───────── Fields in selection set do not merge
───╯

Error: Fields in selection set do not merge due to unequal arguments
    ╭─[<unknown>:9:7]
    │
  9 │ ╭─▶   dog {
 10 │ │       doesKnowCommand(dogCommand: SIT)
    │ │       ───────┬───────  
    │ │              ╰───────── First field
 11 │ │       doesKnowCommand(dogCommand: HEEL)
    │ │       ───────┬───────  
    │ │              ╰───────── Second field
 12 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
────╯

Error: Fields in selection set do not merge due to unequal arguments
    ╭─[<unknown>:16:7]
    │
 16 │ ╭─▶   dog {
 17 │ │       doesKnowCommand(dogCommand: SIT)
    │ │       ───────┬───────  
    │ │              ╰───────── First field
 18 │ │       doesKnowCommand(dogCommand: $dogCommand)
    │ │       ───────┬───────  
    │ │              ╰───────── Second field
 19 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
────╯

Error: Fields in selection set do not merge due to unequal arguments
    ╭─[<unknown>:23:7]
    │
 23 │ ╭─▶   dog {
 24 │ │       doesKnowCommand(dogCommand: $varOne)
    │ │       ───────┬───────  
    │ │              ╰───────── First field
 25 │ │       doesKnowCommand(dogCommand: $varTwo)
    │ │       ───────┬───────  
    │ │              ╰───────── Second field
 26 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
────╯

Error: Fields in selection set do not merge due to unequal arguments
    ╭─[<unknown>:30:7]
    │
 30 │ ╭─▶   dog {
 31 │ │       doesKnowCommand(dogCommand: SIT)
    │ │       ───────┬───────  
    │ │              ╰───────── First field
 32 │ │       doesKnowCommand
    │ │       ───────┬───────  
    │ │              ╰───────── Second field
 33 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
────╯

Error: Fields in selection set do not merge due to incompatible types
    ╭─[<unknown>:37:7]
    │
 37 │ ╭─▶   pet {
    ┆ ┆   
 39 │ │         someValue: nickname
    │ │                    ────┬───  
    │ │                        ╰───── First field has type String
    ┆ ┆   
 42 │ │         someValue: meowVolume
    │ │                    ─────┬────  
    │ │                         ╰────── Second field has type Int
    ┆ ┆   
 44 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
────╯

Error: Field `doesKnowCommand` missing argument(s): dogCommand
    ╭─[<unknown>:32:5]
    │
 32 │     doesKnowCommand
    │     ───────┬───────  
    │            ╰───────── Missing argument(s): dogCommand
────╯

